# py-ote

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  csvreader.py  errorBarUtils.py  fixedPrecision.py  gui.py  likelihood_calculations.py  noiseUtils.py  py-ote.py  pyproject.toml  pytest.ini  requirements.txt  setup-py-ote.py  setup.cfg  setup.py  setup.py.legacy  simple-plot.ui  solverUtils.py  timestampUtils.py
docs/: Makefile  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo
docs/_build/html/_sources/: index.rst.txt
pyoteapp/: errorBarUtils.py  pyote.py  solverUtils.py  timestampUtils.py
scripts/: build-exe.ps1
src/: __init__.py  csvreader.py  errorBarUtils.py  likelihood_calculations.py  py-ote.py  setup-py-ote.py  setup.cfg  setup.py  solverUtils.py
src/pyoteapp/: PYOTE.bat  SER.py  __init__.py  autocorrtools.py  blockIntegrateUtils.py  c_functions.c  c_functions.pyx  checkForNewerVersion.py  csvreader.py  diffraction-table.p  empty-excel-metrics-master.xlsx  empty-excel-metrics.xlsx  errorBarUtils.py  example-penumbral.csv  exponentialEdgeUtilities.py  false_positive.py  genDiffraction.py  gui.py  helpDialog.py  helpDialog.ui  iterative_logl_functions.py  likelihood_calculations.py  model-help.docx  noiseUtils.py  pyote-info.odt  pyote.py  pyote.ui  pyote_modelling_utility_functions.py  run-pyote-mac.bat  setup.cfg  setup_pyote.py  showVideoFrames.py  simple-ote.ini  simple_plot.ui  simple_plot2.ui  simple_plot2Scrollable.ui  simple_plot_ver1.50.ui  solverUtils.py  subframe_timing_utilities.py  timestampDialog.py  (+4 more)
src/pyoteapp/model-examples/: LCP_dod-example.p  diffraction_miss_shotnoise_1.0_readnoise_20.0.csv  diffraction_with_central_spot_shotnoise_1.0_readnoise_20.0.csv  disk_on_disk_annular_shotnoise_1.0_readnoise_20.0.csv  disk_on_disk_annular_shotnoise_1.0_readnoise_20.0.pyote_log.txt  edge_on_disk_miss_shotnoise_0.0_readnoise_10.0.csv  edge_on_disk_standard_penumbral_D55_R35_shotnoise_2.0_readnoise_20.0.csv  fit_metrics.txt  high-rho-diffraction_shotnoise_2.0_readnoise_20.0.csv
src/pyoteapp/model-examples/Normalization/: disk_on_disk_annular_shotnoise_1.0_readnoise_20.0.pyote_normalization.txt
src/pyoteapp/obsolete/: c_functions.c  c_functions.pyx
src/pyoteapp/tests/: iterative_logl_functions_test.py
