[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyote"
dynamic = ["version"]
description = "pyote is an occultation lightcurve timing extraction tool"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.11"
authors = [{ name = "Bob Anderson", email = "bob.anderson.ok@gmail.com" }]
maintainers = [{ name = "Bob Anderson", email = "bob.anderson.ok@gmail.com" }]
keywords = ["desktop app", "asteroid occultation timing extraction"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # GUI stack. PyQt5-Qt5 wheel coverage is inconsistent across versions:
    #   5.15.2  — windows + linux + mac intel (no arm64 mac)
    #   5.15.11 — windows + mac (both archs) but no linux
    # No single version covers all four targets, so split by platform.
    "PyQt5==5.15.11",
    "PyQt5-Qt5==5.15.11; platform_system == 'Darwin'",
    "PyQt5-Qt5==5.15.2;  platform_system != 'Darwin'",
    "PyQt5-sip==12.15.0",
    "pyqtgraph==0.12.4",

    # Scientific stack (newest versions known to work with this source tree;
    # numpy 2.x requires scikit-image >= 0.23, matplotlib >= 3.9, etc.).
    "numpy==2.1.3",
    "scipy==1.15.1",
    "matplotlib==3.10.0",
    "pandas==2.2.3",
    "numba==0.61.0",
    "llvmlite==0.44.0",
    "scikit-image==0.24.0",
    "Pillow==11.1.0",

    # astropy 7.x requires Python >= 3.11; pin to the 6.1 line for 3.10 compat.
    "astropy==6.1.7",

    # Video / image format readers used by showVideoFrames.
    "opencv-python==4.10.0.84",
    "Adv2==1.2.0",

    # Spreadsheet I/O (pyote.py writes .xlsx via pandas+xlsxwriter and reads
    # via openpyxl).
    "openpyxl==3.1.5",
    "XlsxWriter==3.2.0",

    "PyYAML==6.0.2",

    # OS-appropriate user data dir; used to publish PyOTE's entry-point path
    # so sibling apps (PyMovie) can locate this install without env vars.
    "platformdirs>=4,<5",
]

[project.urls]
Homepage = "https://github.com/bob-anderson-ok/py-ote"

[project.gui-scripts]
pyote = "pyoteapp.pyote:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyoteapp = [
    "*.ui",
    "*.bat",
    "*.ini",
    "*.txt",
    "*.pdf",
    "*.csv",
    "*.p",
    "model-examples/*",
]

[tool.setuptools.dynamic]
version = { attr = "pyoteapp.version.__version__" }

[tool.uv]
# Ensure `uv lock` / `uv sync` resolve to versions that have wheels for all
# platforms we ship to, not just the host machine. Without this, running
# `uv lock` on Windows may pick a version that has no arm64-mac wheel,
# silently breaking Apple-Silicon installs.
required-environments = [
    "sys_platform == 'win32'    and platform_machine == 'AMD64'",
    "sys_platform == 'darwin'   and platform_machine == 'arm64'",
    "sys_platform == 'darwin'   and platform_machine == 'x86_64'",
    "sys_platform == 'linux'    and platform_machine == 'x86_64'",
]
